snowbot_ws_backup/log/build_2025-12-11_18-45-13/snowbot_ultrasonics/stdout_stderr.log
running egg_info
writing ../../build/snowbot_ultrasonics/snowbot_ultrasonics.egg-info/PKG-INFO
writing dependency_links to ../../build/snowbot_ultrasonics/snowbot_ultrasonics.egg-info/dependency_links.txt
writing entry points to ../../build/snowbot_ultrasonics/snowbot_ultrasonics.egg-info/entry_points.txt
writing requirements to ../../build/snowbot_ultrasonics/snowbot_ultrasonics.egg-info/requires.txt
writing top-level names to ../../build/snowbot_ultrasonics/snowbot_ultrasonics.egg-info/top_level.txt
reading manifest file '../../build/snowbot_ultrasonics/snowbot_ultrasonics.egg-info/SOURCES.txt'
writing manifest file '../../build/snowbot_ultrasonics/snowbot_ultrasonics.egg-info/SOURCES.txt'
running build
running build_py
copying snowbot_ultrasonics/ultrasonic_node.py -> /home/pi/snowbot_ws/build/snowbot_ultrasonics/build/lib/snowbot_ultrasonics
running install
running install_lib
copying /home/pi/snowbot_ws/build/snowbot_ultrasonics/build/lib/snowbot_ultrasonics/ultrasonic_node.py -> /home/pi/snowbot_ws/install/snowbot_ultrasonics/lib/python3.10/site-packages/snowbot_ultrasonics
byte-compiling /home/pi/snowbot_ws/install/snowbot_ultrasonics/lib/python3.10/site-packages/snowbot_ultrasonics/ultrasonic_node.py to ultrasonic_node.cpython-310.pyc
  File "/home/pi/snowbot_ws/install/snowbot_ultrasonics/lib/python3.10/site-packages/snowbot_ultrasonics/ultrasonic_node.py", line 8
    from digitalio import Direction as digitalio.Direction
                                                ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/pi/snowbot_ws/install/snowbot_ultrasonics/lib/python3.10/site-packages/snowbot_ultrasonics-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/snowbot_ultrasonics/snowbot_ultrasonics.egg-info to /home/pi/snowbot_ws/install/snowbot_ultrasonics/lib/python3.10/site-packages/snowbot_ultrasonics-0.0.0-py3.10.egg-info
running install_scripts
Installing ultrasonic_node script to /home/pi/snowbot_ws/install/snowbot_ultrasonics/lib/snowbot_ultrasonics
writing list of installed files to '/home/pi/snowbot_ws/build/snowbot_ultrasonics/install.log'
